chat align fix on left

--- a/client/stylesheets/12_index.css
+++ b/client/stylesheets/12_index.css
@@ -17,3 +17,28 @@
   width: 100%;
   height: 315px;
 }
+
+/*CHATS ALIGN FIX ON LEFT*/
+.chat-discussion .chat-message:nth-child(2n) .message-avatar {
+  margin-left: 0px !important;
+}
+
+.chat-discussion .chat-message:nth-child(2n) .message {
+  text-align: none !important;
+  margin-right: 0px !important;
+}
+
+.chat-discussion .chat-message .message {
+  text-align: left !important;
+  margin-left: 55px !important;
+}
+
+.chat-discussion .chat-message .message-date {
+  float: right !important;
+}
+
+.chat-discussion .chat-message .message-avatar {
+  float: left !important;
+  margin-right: !important;
+}
+/*CHATS ALIGN FIX ON LEFT*/
